@@ -14,7 +14,48 @@ License for more details.
 */
 #include "test-ehbigint-private-utils.h"
 
-int test_subtract(int verbose)
+int test_subtract(int verbose, const char *str_1, const char *str_2,
+		  const char *expect)
+{
+	int err, failures;
+	unsigned char bytes_buf1[20];
+	unsigned char bytes_buf2[20];
+	unsigned char bytes_buf3[14];
+	struct ehbigint bi1, bi2, bi3;
+
+	VERBOSE_ANNOUNCE(verbose);
+	failures = 0;
+
+	bi1.bytes = bytes_buf1;
+	bi1.bytes_len = 20;
+
+	bi2.bytes = bytes_buf2;
+	bi2.bytes_len = 20;
+
+	bi3.bytes = bytes_buf3;
+	bi3.bytes_len = 20;
+
+	err = ehbi_set_decimal_string(&bi1, str_1, strlen(str_1));
+	err += ehbi_set_decimal_string(&bi2, str_2, strlen(str_2));
+	if (err) {
+		Test_log_error1("error %d from ehbi_set_decimal_string\n", err);
+		Test_log_error("Aborting test\n");
+		return (1 + failures);
+	}
+
+	err = ehbi_subtract(&bi3, &bi1, &bi2);
+	if (err) {
+		Test_log_error1("error %d from ehbi_subtract\n", err);
+		Test_log_error("Aborting test\n");
+		return (1 + failures);
+	}
+
+	failures += check_ehbigint_dec(&bi3, expect, __LINE__, TEST_FUNC);
+
+	return failures;
+}
+
+int test_subtract_big(int verbose)
 {
 	int err, failures;
 	unsigned char bytes_buf1[20];
@@ -26,8 +67,6 @@ int test_subtract(int verbose)
 	const char *str_1 = "0x0F20100F00002202040A";
 	const char *str_2 = "0x0320000200004404020A";
 	const char *str_3 = "0x0C00100CFFFFDDFE0200";
-
-	const char *str_4 = "0xF3FFEFF300002201FE00";
 
 	VERBOSE_ANNOUNCE(verbose);
 	failures = 0;
@@ -61,15 +100,6 @@ int test_subtract(int verbose)
 
 	failures += check_ehbigint_hex(&bi3, str_3, __LINE__, TEST_FUNC);
 
-	err = ehbi_subtract(&bi3, &bi2, &bi1);
-	if (err) {
-		Test_log_error1("error %d from ehbi_subtract\n", err);
-		Test_log_error("Aborting test\n");
-		return (1 + failures);
-	}
-
-	failures += check_ehbigint_hex(&bi3, str_4, __LINE__, TEST_FUNC);
-
 	if (failures) {
 		Test_log_error1("%d failures in test_subtract\n", failures);
 	}
@@ -84,7 +114,15 @@ int main(int argc, char **argv)
 	v = (argc > 1) ? atoi(argv[1]) : 0;
 	failures = 0;
 
-	failures += test_subtract(v);
+	failures += test_subtract(v, "257", "255", "2");
+	failures += test_subtract(v, "0", "23", "-23");
+	failures += test_subtract(v, "5", "7", "-2");
+	failures += test_subtract(v, "2", "11", "-9");
+	failures += test_subtract(v, "-11", "2", "-13");
+	failures += test_subtract(v, "-5", "-2", "-3");
+	failures += test_subtract(v, "-17", "-27", "10");
+
+	failures += test_subtract_big(v);
 
 	if (failures) {
 		Test_log_error2("%d failures in %s\n", failures, __FILE__);
